add readme and href on github

--- a/index.html
+++ b/index.html
@@ -60,5 +60,9 @@
     </div>
     <script src="main.js"></script>
 
+    <div class="jumbotron">
+        <a href="https://github.com/vlkulpinov/vlkulpinov.github.io">Repository on github</a>
+    </div>
+
   </body>
 </html>
